@@ -1,3 +1,4 @@
+- STREL-612 Fix sites overlapping forced non-variant indels
 - STREL-602 Retrain germline SNV EVS on updated alignments
 - STREL-597 Add low depth filter for both somatic and germline calls
 - STREL-596 Add missing data to pooled indel calls
